Fix dark mode for multiselect

--- a/src/views/settings/Settings.sass
+++ b/src/views/settings/Settings.sass
@@ -49,6 +49,15 @@ $scrollbar-thumb-hover-dark: #555555
         scrollbar-color: $scrollbar-thumb-dark $scrollbar-track-dark
 
 .Settings
+    .react-dropdown-select
+        .dark &
+            border-color: $dark-border !important
+            .react-dropdown-select-dropdown
+                background: $dark-input-bg
+                border: none !important
+            .react-dropdown-select-item, .react-dropdown-select-item-selected
+                border: none !important
+
     h1
         margin: 2rem 0
         svg
